...
  String get fontSizeExtraLarge => 'Extra Large';

  @override
  String get close => 'Close';

  @override
  String get searchHint => 'Search';

  @override
  String get isExactMatchToggle => 'Exact word match';

  @override
  String get refineSearch => 'Refine Search';
...
  }

  @override
  String get reset => 'Reset';

  @override
  String get clear => 'Clear';

  @override
  String get clearAll => 'Clear All';

  @override
  String get scopeAll => 'All';
...
